fixed home shot bug that stretched the photo

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -137,11 +137,10 @@ img[src*="cdninstagram"] {
 }
 
 .pictureoftheday img {
-
   width: 100%;
-  @media only screen and (min-width: 640px) {
-    width: auto;
-  }
+  // @media only screen and (min-width: 640px) {
+  //   width: auto;
+  // }
 }
 
 .shots {
